# open-falcon-api-python-cleint

./: COPYING.txt  LICENSE  PKG-INFO  README.md  README.txt  setup.cfg  setup.py
openfalconclient/: client.py  exceptions.py
openfalconclient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
