[metadata]
name = python-openfalconclient
summary = Client library for open-falcon API
author = open-falcon
home-page = https://www.xyclouds.com
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages =
    openfalconclient

[wheel]
universal = 1
